# sam-3d-objects

./: .gitignore  demo.py  pyproject.toml  requirements.my.txt
notebook/: demo_multi_object.ipynb  demo_multi_object.py  demo_single_object.ipynb  demo_single_object.py  inference.py
sam3/: test_image.py
sam3d_objects/model/backbone/dit/embedder/: dino.py
sam3d_objects/model/backbone/tdfy_dit/representations/gaussian/: gaussian_model.py
sam3d_objects/pipeline/: inference_pipeline.py
third_parts/MoGe/: pyproject.toml  requirements.txt
